Updates from Overleaf

--- a/sections/02_abstract.tex
+++ b/sections/02_abstract.tex
@@ -58,23 +58,17 @@ Use of thrombolysis to treat emergency stroke patients varies considerably betwe
 
 \textbf{Conclusions}
 
-Using observational data and machine learning, thrombolysis was found to have at least as much benefit as predicted by the clinical trial meta-analysis. Variation in decision-making concerning thrombolysis is leading to significant between-hospital variation in thrombolysis use, and is leading to variation in outcomes. There was an apparent trade-off in decision-making between
-hospitals. Those hospitals who gave thrombolysis to more patients who would benefit from it (higher sensitivity) were
-also more likely to give thrombolysis to more patients who would not benefit from it (lower specificity). This represents
-a trade-off between ‘Miss no benefit’ and ‘Do no harm’. Maximising benefit while minimising harm is likely to require
-more sophisticated guidance on use of thrombolysis, such as that indicated by our model.
-25
-Stroke teams with higher thrombolysis use are predicted to be generating better patient outcomes. 
+We combined qualitative research and large-scale observational data with machine learning on use of, and outcomes from, thrombolysis. Both qualitative research and machine learning revealed significant between-hospital variation in which patients receive thrombolysis. Machine learning revealed that who will benefit from thrombolysis is patient-specific, and not easily captured in a simple medicine use label, but we found overall that stroke teams with a higher willingness to use thrombolysis are predicted to be generating better patient outcomes at a population level.
 
 \section*{Plain Language Summary}
 \addcontentsline{toc}{section}{Plain Language Summary}
 
 \textbf{What is the problem?} Use of clot-busting treatment (`\textit{thrombolysis}') in stroke varies a great deal between hospitals.
 
-\textbf{What did we know?} We knew that the largest cause of this variation was in how patients decide which patients are suitable for thrombolysis. Some doctors are worried that the risk from this treatment can outweigh the benefits, and that use of this treatment in the real world won’t have the same benefit that was predicted by the clinical trials.
+\textbf{What did we know?} We know that the largest cause of this variation is in how doctors decide which patients are suitable for thrombolysis. Some clinicians are worried that the risks can outweigh the benefits, and that use of this treatment in the real world won’t have the same benefits that were predicted by the clinical trials.
 
-\textbf{What did we not know?} We did not know 1) how the variation in use of thrombolysis was affecting patient outcomes, 2) what it was about the patients that doctors considered when making decisions, 3) what most affected patient outcome, 4) what doctors would think of using artificial intelligence (`AI') to help understand answers to these questions.
+\textbf{What did we not know?} We did not know (1) how this variation in use of thrombolysis was affecting patient outcomes, (2) what it was about the patients that doctors considered when making decisions, (3) what most affected patient outcome, (4) what doctors would think of using artificial intelligence (`AI') to help understand answers to these questions.
 
-\textbf{What did we do?} We used artificial intelligence to learn which patients different hospitals would give thrombolysis to, and to learn which patients would likely have a better outcome if this treatment was used.
+\textbf{What did we do?} We used AI to learn which patients different hospitals would give thrombolysis to, and to learn which patients would likely have a better outcome if this treatment was used.
 
-\textbf{What did we find out?} We found out that thrombolysis was at least as effective in real use as clinical trials predicted, and that hospitals choosing to use it more are very likely saving more lives and reducing disability from stroke. We now understand what doctors look at when deciding to use it or not, and what affects patient outcomes. We  found that speeding up giving this treatment would improve the number of people who would receive it, and would mean everyone receiving it would benefit more from it. We found that doctors were interested in our work, but they need to be convinced our ‘Artificial Intelligence’ is right, We are hopeful that our results will give doctors greater confidence to use this treatment more often, and to always give it as fast as possible.
+\textbf{What did we find?} We found that thrombolysis was at least as effective in real-world use as the original clinical trials predicted, and that hospitals choosing to use it more are very likely saving more lives and reducing disability from stroke. We now understand what factors influence doctors the most when deciding to use it or not, and what most affects patient outcomes. We found that speeding up thrombolysis would not increase the number of people who receive it much, but it would mean everyone receiving it would benefit more. We found that clinicians felt that our work could help improve their practice, but they needed more convincing that our ‘AI’ methods were valid. We are hopeful that our results will give clinicians greater confidence to use this treatment more often and in more patients, and to always give it as fast as possible.
