--- a/sections/05_paper_overview.tex
+++ b/sections/05_paper_overview.tex
@@ -5,7 +5,7 @@
 
 \textbf{Study type and population}
 
-Qualitative study: 184 hours of focussed observation in three NHS Trusts in England. Observation of Integrated Stroke Delivery Networks (ISDNs) and other organisations with a strategic overview of stroke services. 20 participants from the three observation sites and five key informants from other sites took part in semi-structured interviews.
+Qualitative study: 184 hours of focused observation in three NHS Trusts in England. Observation of Integrated Stroke Delivery Networks (ISDNs) and other organisations with a strategic overview of stroke services. 20 participants from the three observation sites and five key informants from other sites took part in semi-structured interviews.
 
 \textbf{Key findings}
 
@@ -49,7 +49,7 @@ Explainable machine learning model to investigate clinical benefit of thrombolys
 \textbf{Key findings}
 
 \begin{itemize}
-    \item Thrombolysis was found to be associated with a statistically significant improvement in the odds of having a good outcome using any mRS threshold. Regression analysis predicted a maximum 2.5-fold improvement in odds of achieving mRS 0-1, with a decline to no treatment effect at 5 hours 28 minutes post-onset. The observed beneficial effect is very similar to Emberson’s meta-analysis of a maximum 2.0-fold improvement in odds of achieving mRS 0-1, with a decline to no treatment effect at 6 hours 88 minutes post-onset.
+    \item Thrombolysis was found to be associated with a statistically significant improvement in the odds of having a good outcome using any mRS threshold. Regression analysis predicted a maximum 2.5-fold improvement in odds of achieving mRS 0-1, with a decline to no treatment effect at 5 hours 28 minutes post-onset. The observed beneficial effect is very similar to Emberson’s meta-analysis \cite{emberson_effect_2014} of a maximum 2.0-fold improvement in odds of achieving mRS 0-1, with a decline to no treatment effect at 6 hours 18 minutes post-onset.
     
 \end{itemize}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -67,7 +67,7 @@ Explainable machine learning model to investigate thrombolysis decision making (
     
     \item 73\% of those treated were predicted to have a better outcome with thrombolysis, and 49\% of those not treated were predicted to have a better outcome with thrombolysis.
     
-    \item Patients with mismatched treatment decisions (actual thrombolysis use vs. predicted to benefit) can not be identified from an isolated feature value.
+    \item Patients with mismatched treatment decisions (actual thrombolysis use vs. predicted to benefit) cannot be identified from any one isolated feature value (such as stroke severity).
     
     \item Individual hospitals vary in balancing maximising benefit from thrombolysis vs. avoiding any possible harm.
 \end{itemize}
@@ -77,18 +77,18 @@ Explainable machine learning model to investigate thrombolysis decision making (
 
 \textbf{Study type and population}
 
-Clinical pathway simulation, mathematical outcome modelling, and machine learning to investigate thrombolysis decision making and outcomes after stroke. The model was based on 5 years of all emergency stroke arrivals, by ambulance, to hospitals in England and Wales (302,715 patients).
+Clinical pathway simulation, mathematical outcome modelling, and machine learning were usd to investigate thrombolysis decision making and outcomes after stroke. The model was based on 5 years of all emergency stroke arrivals, by ambulance, to hospitals in England and Wales (302,715 patients).
 
 \textbf{Key findings}
 
 \begin{itemize}
-    \item Combining potential changes (improving arrival-to-thrombolysis times to 30 mins, reducing ambulance call-to-hospital-arrival times by 15 minutes, having all teams attain the current upper-quartile performance in determining stroke onset time, and applying decision making similar to high thrombolysing units) would be expected to increase thrombolysis use in patients arriving by ambulance from 13\% to 20\% and double the clinical benefit (additional patients discharged mRS 0-1) from thrombolysis.
+    \item Combining pathway improvements (improving arrival-to-thrombolysis times to 30 mins, reducing ambulance call-to-hospital-arrival times by 15 minutes, having all teams attain the current upper-quartile performance in determining stroke onset time, and applying decision making similar to high thrombolysing units) would be expected to increase thrombolysis use in patients arriving by ambulance from 13\% to 20\% and double the clinical benefit (additional patients discharged with mRS 0-1) from thrombolysis.
     
     \item The largest single factor in improving both thrombolysis use and outcomes is differences in clinical decision-making. Stroke teams vary in clinical decision-making especially in subgroups of patients with features that make them non-ideal candidates for thrombolysis: mild stroke, pre-existing disability, and imprecisely known stroke onset times.
     
     \item High thrombolysing units are predicted to be generating more net benefit (including better avoidance of mortality and severe disability) than low thrombolylsing units.
 
-    \item Improving speed and consistency of the emergency stroke pathway would improve thrombolysis use somewhat, but speed improvements would have a larger effect on patient benefit.
+    \item Improving speed and consistency of the emergency stroke pathway would improve thrombolysis use a little, but speed improvements (both pre-hospital and in-hospital) would have a larger effect on patient benefit.
     
     \item A health economics model, using the output from the outcome prediction model, estimated that thrombolysis produces an additional 0.26 QALY for each person treated.
 
