--- a/sections/06_data.tex
+++ b/sections/06_data.tex
@@ -10,13 +10,13 @@ The following data fields from SSNAP were used in the modelling:
 
     \item \textit{Stroke team}: Stroke team attended (hospital identifier).
 
-    \item \textit{Age}: As midpoint of 5 year age bands.
+    \item \textit{Age}: Age (as midpoint of 5 year age bands).
 
     \item \textit{Sex}: Sex of patient (male/female).
 
-    \item \textit{Diagnosis of atrial fibrillation}: Did the patient have a diagnosis of atrial fibrillation, either made prior to admission, or during admission?
+    \item \textit{Atrial fibrillation diagnosis}: Patient had a diagnosis of atrial fibrillation, either on arrival or diagnosed during admission (1 = Yes, 0 = No).
 
-    \item \textit{Use of anticoagulants}: Use of prior anticoagulant for atrial fibrillation.
+    \item \textit{Use of atrial fibrillation (AF) anticoagulants}: Use of prior anticoagulant for atrial fibrillation (1 = Yes, 0 = No).
 
     \item \textit{Onset known}: Whether onset was known, and if known whether it was considered to be known precisely or was a best estimate.
 
@@ -52,8 +52,8 @@ As we are using anonymised secondary data, collected for national audit, used fo
 
 \subsection{Data for qualitative research}
 
-Qualitative research used a combination of observations, interviews and documentary analysis. See section \ref{sec:paper_1} for further details.
+Qualitative research used a combination of ethnographic observations, interviews and documentary analysis. See section \ref{sec:paper_1} for further details.
 
 \subsubsection{Ethics}
 
-NHS Health Research Authority (HRA) \& Health and Care Research Wales (HCRW) approval was provided by the Essex Research Ethics Committee in August 2023 (IRAS 322303; REC reference 23/EE/0124).
+For the qualitative study, NHS Health Research Authority (HRA) \& Health and Care Research Wales (HCRW) approval was provided by the Essex Research Ethics Committee in August 2023 (IRAS 322303; REC reference 23/EE/0124).
