--- a/sections/50_appendix.tex
+++ b/sections/50_appendix.tex
@@ -3,7 +3,7 @@
 \section{Descriptive statistics}
 \label{sec:stats}
 
-Tables \ref{tab:hospital_stats_1} to \ref{tab:hospital_stats_3} show descriptive statistics for patients (2016-2021) across all stroke teams for (1) all patients, patients arriving within 4 hours of known stroke onset, and patients arriving by ambulance within 4 hours of known stroke onset. These statistics are for 5 years arrivals (2017-2021).
+Tables \ref{tab:hospital_stats_1} to \ref{tab:hospital_stats_3} show descriptive statistics for patients (2016-2021) across all stroke teams for (1) all patients, patients arriving within 4 hours of known stroke onset, and patients arriving by ambulance within 4 hours of known stroke onset.
 
 \begin{minipage}{1\textwidth}
 \small
