--- a/main.tex
+++ b/main.tex
@@ -73,7 +73,8 @@
 
 \newpage
 %TC:ignore
-\include{sections/02_abstract}
+%\include{sections/02_abstract}
+\include{sections/02_abstract_572}
 %TC:endignore
 \input{sections/03_intro}
 \input{sections/04_study_pathway}
@@ -85,7 +86,7 @@
 \include{sections/14_paper_4}
 \include{sections/15_paper_5}
 \input{sections/20_other_outputs}
-\input{sections/21_discussion}
+\include{sections/21_discussion}
 \input{sections/23_other}
 
 
