--- a/sections/12_paper_2.tex
+++ b/sections/12_paper_2.tex
@@ -22,9 +22,9 @@ The best model with 1, 2, 5, 10, 25 \& all 83 original features had ROC AUCs of 
     \item \emph{Infarction}: Stroke type (1 = infarction, 0 = haemorrhage)
     \item \emph{Stroke severity}: National Institutes of Health Stroke Scale (NIHSS) score on arrival
     \item \emph{Precise onset time}: Onset time (1 = precise, 0 = best estimate)
-    \item \emph{Prior disability level}: Disability level (modified Rankin Scale; mRS) before stroke
+    \item \emph{Prior disability level}: Estimated mRS score prior to stroke
     \item \emph{Stroke team}: Stroke team attended (hospital identifier)
-    \item \emph{Use of anticoagulants}: Use of prior anticoagulant (1 = Yes, 0 = No)
+    \item \emph{Use of atrial fibrillation (AF) anticoagulants}: Use of prior anticoagulant for atrial fibrillation (1 = Yes, 0 = No)
     \item \emph{Onset-to-arrival time}: Time from onset of stroke to arrival at hospital (minutes)
     \item \emph{Onset during sleep}: Did stroke occur in sleep? (1 = Yes, 0 = No)
     \item \emph{Age}: Age (as midpoint of 5 year age bands)
@@ -67,15 +67,15 @@ Global patterns of how feature values affect the odds of receiving thrombolysis 
 Figure \ref{fig:global_shap} shows the relationship between patient characteristics and the log odds of receiving thrombolysis. Key observations are (with SHAP influence converted from log-odds to odds):
 
 \begin{itemize}
-    \item \emph{Stroke type}: The SHAP values for stroke type show that the model effectively eliminated any probability of receiving thrombolysis for non-ischaemic (haemorrhagic) stroke, with the odds of receiving thrombolysis falling by over 6,000 fold.
-    \item \emph{Arrival-to-scan time}: The odds of receiving thrombolysis reduced by about 9 fold over the first 120 minutes of arrival-to-scan time.
-    \item \emph{Stroke severity (NIHSS)}: The odds of receiving thrombolysis were lowest at NIHSS 0, increased and peaked at NIHSS 15-25, and then fell again with higher stroke severity (NIHSS above 25). The difference between minimum odds (at NIHSS 0) and maximum odds (at 15-25) of receiving thrombolysis was 25-30 fold.
-    \item \emph{Stroke onset time type (precise vs. estimated)}: The odds of receiving thrombolysis were about 3 fold greater for precise onset time than estimated onset time.
-    \item \emph{Disability level (mRS) before stroke}: The odds of receiving thrombolysis fell about 6 fold between mRS 0 and 5.
-    \item \emph{Use of AF anticoagulants}: The odds of receiving thrombolysis were about 5 fold greater for no use.
-    \item \emph{Onset-to-arrival time}: The odds of receiving thrombolysis were similar below 120 minutes, then fell about 3 fold between 120 and 240 minutes.
-    \item \emph{Age}: The odds of receiving thrombolysis were similar below 80 years old, then fell about 2 fold between 80 and 110 years old.    
-    \item \emph{Onset during sleep}: The odds of receiving thrombolysis were about 4 fold lower for onset during sleep.
+    \item \emph{Stroke type}: The SHAP values for stroke type show that the model effectively eliminated any probability of receiving thrombolysis for non-ischaemic (haemorrhagic) stroke, with the odds of receiving thrombolysis falling by over 6,000-fold.
+    \item \emph{Arrival-to-scan time}: The odds of receiving thrombolysis reduced by about 9-fold over the first 120 minutes of arrival-to-scan time.
+    \item \emph{Stroke severity (NIHSS)}: The odds of receiving thrombolysis were lowest at NIHSS 0, increased and peaked at NIHSS 15-25, and then fell again with higher stroke severity (NIHSS above 25). The difference between minimum odds (at NIHSS 0) and maximum odds (at 15-25) of receiving thrombolysis was 25 to 30-fold.
+    \item \emph{Stroke onset time type (precise vs. estimated)}: The odds of receiving thrombolysis were about 3-fold greater for precise onset time than estimated onset time.
+    \item \emph{Disability level (mRS) before stroke}: The odds of receiving thrombolysis fell about 6-fold between mRS 0 and 5.
+    \item \emph{Use of AF anticoagulants}: The odds of receiving thrombolysis were about 5-fold greater for no use.
+    \item \emph{Onset-to-arrival time}: The odds of receiving thrombolysis were similar below 120 minutes, then fell about 3-fold between 120 and 240 minutes.
+    \item \emph{Age}: The odds of receiving thrombolysis were similar below 80 years old, then fell about 2-fold between 80 and 110 years old.    
+    \item \emph{Onset during sleep}: The odds of receiving thrombolysis were about 4-fold lower for onset during sleep.
 \end{itemize}
 
 \begin{figure}[ht!]
@@ -87,7 +87,7 @@ Figure \ref{fig:global_shap} shows the relationship between patient characterist
 
 \subsubsection{How hospital attended affects the odds of receiving thrombolysis}
 
-Figure \ref{fig:hospital_shap} shows the distribution of SHAP values for hospital attended. The hospital SHAP value isolates the affect that attending any given hospital has on the odds of receiving thrombolysis. There was a 13 fold difference in odds of receiving thrombolysis between hospitals.
+Figure \ref{fig:hospital_shap} shows the distribution of SHAP values for hospital attended. The hospital SHAP value isolates the affect that attending any given hospital has on the odds of receiving thrombolysis. There was a 13-fold difference in odds of receiving thrombolysis between hospitals.
 
 \begin{figure}
     \centering
@@ -102,4 +102,4 @@ We compared expected thrombolysis use in subgroups of patients. This is not incl
 
 \subsection{Conclusions}
 
-Using explainable machine learning, we have identified how patient features and hospital attended influence decisions to treat with thrombolysis. We showed that the majority of the between-hospital variation in thrombolysis use in England and Wales, for patients arriving with time to thrombolyse, may be explained by differences in in-hospital processes and differences in attitudes to judging suitability for thrombolysis.
+Using explainable machine learning on a large national stroke registry dataset, we have identified how patient features and hospital attended influence decisions to treat with thrombolysis. We showed that the majority of the between-hospital variation in thrombolysis use in England and Wales, for patients arriving with time to thrombolyse, is explained by differences between in-hospital processes and differences in attitudes to eligibility for thrombolysis.
